Updated Events Gallery & Kappa Class

--- a/events.html
+++ b/events.html
@@ -200,7 +200,161 @@
         </div> -->
 
         <div class="row portfolio-container">
+        <!-- New 2025 Event Photos -->
+        
+        <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
+          <div class="portfolio-wrap">
+            <img src="images/events25/formal_2.jpeg" class="img-fluid" alt>
+            <div class="portfolio-info">
+              <h4><a>Formal</a></h4>
+            </div>
+          </div>
+        </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
+          <div class="portfolio-wrap">
+            <img src="images/events25/winetour_sparklin.jpeg" class="img-fluid" alt>
+            <div class="portfolio-info">
+              <h4><a>Sparklin</a></h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
+          <div class="portfolio-wrap">
+            <img src="images/events25/formal_3.jpeg" class="img-fluid" alt>
+            <div class="portfolio-info">
+              <h4><a>Formal</a></h4>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
+          <div class="portfolio-wrap">
+            <img src="images/events25/applefest_3.JPG" class="img-fluid" alt>
+            <div class="portfolio-info">
+              <h4><a>Apple Fest</a></h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
+          <div class="portfolio-wrap">
+            <img src="images/events25/formal.jpeg" class="img-fluid" alt>
+            <div class="portfolio-info">
+              <h4><a>Formal</a></h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
+          <div class="portfolio-wrap">
+            <img src="images/events25/dayaway.JPG" class="img-fluid" alt>
+            <div class="portfolio-info">
+              <h4><a>Day Away</a></h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
+          <div class="portfolio-wrap">
+            <img src="images/events25/hoco25.JPG" class="img-fluid" alt>
+            <div class="portfolio-info">
+              <h4><a>Homecoming</a></h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
+          <div class="portfolio-wrap">
+            <img src="images/events25/linevent.jpg" class="img-fluid" alt>
+            <div class="portfolio-info">
+              <h4><a>Lin Event</a></h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
+          <div class="portfolio-wrap">
+            <img src="images/events25/hoco25_2.JPG" class="img-fluid" alt>
+            <div class="portfolio-info">
+              <h4><a>Homecoming</a></h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
+          <div class="portfolio-wrap">
+            <img src="images/events25/applefest.JPG" class="img-fluid" alt>
+            <div class="portfolio-info">
+              <h4><a>Apple Fest</a></h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
+          <div class="portfolio-wrap">
+            <img src="images/events25/dayaway_2.jpeg" class="img-fluid" alt>
+            <div class="portfolio-info">
+              <h4><a>Day Away</a></h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
+          <div class="portfolio-wrap">
+            <img src="images/events25/applefest_2.JPG" class="img-fluid" alt>
+            <div class="portfolio-info">
+              <h4><a>Apple Fest</a></h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
+          <div class="portfolio-wrap">
+            <img src="images/events25/zocalos.JPG" class="img-fluid" alt>
+            <div class="portfolio-info">
+              <h4><a>Zocalos</a></h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
+          <div class="portfolio-wrap">
+            <img src="images/events25/stpattys.jpeg" class="img-fluid" alt>
+            <div class="portfolio-info">
+              <h4><a>St. Pattys</a></h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
+          <div class="portfolio-wrap">
+            <img src="images/events25/dayaway_3.JPG" class="img-fluid" alt>
+            <div class="portfolio-info">
+              <h4><a>Day Away</a></h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
+          <div class="portfolio-wrap">
+            <img src="images/events25/stpattys_2.jpg" class="img-fluid" alt>
+            <div class="portfolio-info">
+              <h4><a>St. Pattys</a></h4>
+            </div>
+          </div>
+        </div>
+        
+        <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
+          <div class="portfolio-wrap">
+            <img src="images/events25/winetour.jpeg" class="img-fluid" alt>
+            <div class="portfolio-info">
+              <h4><a>Wine Tour</a></h4>
+            </div>
+          </div>
+        </div>
           <!--==========================
           New Sisterhood Photos
         ============================-->
