--- a/sisters.html
+++ b/sisters.html
@@ -113,6 +113,280 @@
         </div>
       </div>
     </section><!-- #faq -->
+   
+        <!--==========================
+      Kappa Class Section
+      ============================-->
+    <section id="team" class>
+      <div class="container">
+        <br>
+        <div class="section-header text-center">
+          <h5>Spring 2025</h5>
+          <h3>Kappa Class</h3>
+          <br>
+        </div>
+
+        <div class="row">
+
+          <!-- Surabhi Bachhav -->
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <img src="images/kappaclass/surabhi.png" class="img-fluid" alt="Surabhi Bachhav">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Surabhi Bachhav</h4>
+                  <span>Computer Science ’28</span>
+                  <div class="social">
+                    <a href="https://www.linkedin.com/in/surabhi-bachhav/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/bachhavsurabhi/" target="_blank"><i class="fa fa-instagram"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Carmen Dai -->
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <img src="images/kappaclass/carmen.png" class="img-fluid" alt="Carmen Dai">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Carmen Dai</h4>
+                  <span>Chemical Engineering ’27</span>
+                  <div class="social">
+                    <a href="https://www.linkedin.com/in/cdai05/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/_carmendai/" target="_blank"><i class="fa fa-instagram"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Liliana Franzese -->
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <img src="images/kappaclass/lili.png" class="img-fluid" alt="Liliana Franzese">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Liliana Franzese</h4>
+                  <span>Biological Engineering ’28</span>
+                  <div class="social">
+                    <a href="https://www.linkedin.com/in/liliana-franzese-69121b352/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/liliana_franzese/" target="_blank"><i class="fa fa-instagram"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Allison Haris -->
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <img src="images/kappaclass/allison.png" class="img-fluid" alt="Allison Haris">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Allison Haris</h4>
+                  <span>Chemical and Biomolecular Engineering ’27</span>
+                  <div class="social">
+                    <a href="https://www.linkedin.com/in/allison-haris/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/allison_.haris/" target="_blank"><i class="fa fa-instagram"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Anona Joshi -->
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <img src="images/kappaclass/anona.png" class="img-fluid" alt="Anona Joshi">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Anona Joshi</h4>
+                  <span>Biomedical Engineering ’27</span>
+                  <div class="social">
+                    <a href="https://www.linkedin.com/in/anona-joshi-904348290/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/anonaj147/" target="_blank"><i class="fa fa-instagram"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Crystal Li -->
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <img src="images/kappaclass/crystal.png" class="img-fluid" alt="Crystal Li">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Crystal Li</h4>
+                  <span>Biomedical Engineering ’27</span>
+                  <div class="social">
+                    <a href="https://www.linkedin.com/in/crystal-li-698431255/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/somethingrelatedtocats/" target="_blank"><i class="fa fa-instagram"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Sweksha Mehta -->
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <img src="images/kappaclass/sweksha.png" class="img-fluid" alt="Sweksha Mehta">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Sweksha Mehta</h4>
+                  <span>Mechanical Engineering ’27</span>
+                  <div class="social">
+                    <a href="https://www.linkedin.com/in/sweksha-mehta/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/sweksha.mehta/" target="_blank"><i class="fa fa-instagram"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Varija Mehta -->
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <img src="images/kappaclass/varija.png" class="img-fluid" alt="Varija Mehta">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Varija Mehta</h4>
+                  <span>Computer Science ’27</span>
+                  <div class="social">
+                    <a href="https://www.linkedin.com/in/varija-mehta/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/varija.me/" target="_blank"><i class="fa fa-instagram"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Helen Ni -->
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <img src="images/kappaclass/helen.png" class="img-fluid" alt="Helen Ni">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Helen Ni</h4>
+                  <span>Electrical and Computer Engineering ’27</span>
+                  <div class="social">
+                    <a href="https://www.linkedin.com/in/helen-ni/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/helenn.ni/" target="_blank"><i class="fa fa-instagram"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- AJ Orantia -->
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <img src="images/kappaclass/AJ.png" class="img-fluid" alt="AJ Orantia">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>AJ Orantia</h4>
+                  <span>Operations Research and Business ’27</span>
+                  <div class="social">
+                    <a href="https://www.linkedin.com/in/alexandra-orantia/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/alexandra.orantia/" target="_blank"><i class="fa fa-instagram"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Jessica Penna -->
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <img src="images/kappaclass/jess.png" class="img-fluid" alt="Jessica Penna">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Jessica Penna</h4>
+                  <span>Electrical and Computer Engineering ’28</span>
+                  <div class="social">
+                    <a href="https://www.linkedin.com/in/jessica-penna-8051a234a/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/jess_penna_/" target="_blank"><i class="fa fa-instagram"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Malvika Rao -->
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <img src="images/kappaclass/malvika.png" class="img-fluid" alt="Malvika Rao">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Malvika Rao</h4>
+                  <span>Chemical Engineering ’28</span>
+                  <div class="social">
+                    <a href="https://www.linkedin.com/in/malvika-rao-cornell/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/mali_r__/" target="_blank"><i class="fa fa-instagram"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Jenna Reiss -->
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <img src="images/kappaclass/jenna.png" class="img-fluid" alt="Jenna Reiss">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Jenna Reiss</h4>
+                  <span>Environmental Engineering ’27</span>
+                  <div class="social">
+                    <a href="https://www.linkedin.com/in/jenna-reiss-cu/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/jennareiss/" target="_blank"><i class="fa fa-instagram"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Chanpisey Ung -->
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <img src="images/kappaclass/chanpisey.png" class="img-fluid" alt="Chanpisey Ung">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Chanpisey Ung</h4>
+                  <span>Math and Physics ’28</span>
+                  <div class="social">
+                    <a href="https://www.linkedin.com/in/chanpisey-ung-/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/chanpisey/" target="_blank"><i class="fa fa-instagram"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Claire Yu -->
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <img src="images/kappaclass/claire.png" class="img-fluid" alt="Claire Yu">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Claire Yu</h4>
+                  <span>Computer Science and Cognitive Science ’28</span>
+                  <div class="social">
+                    <a href="https://www.linkedin.com/in/claiireyu/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/claiireyu/" target="_blank"><i class="fa fa-instagram"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
     <!--==========================
       Zeta Class Section
       ============================-->
@@ -262,7 +536,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="member">
-              <img src="images/f24/iota_class/melissa_jairam.png"  class="img-fluid" alt>
+              <img src="images/f24/iota_class/melissa.png"  class="img-fluid" alt>
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Melissa Jairam</h4>
