Deleted Images -- to be replaced

--- a/events.html
+++ b/events.html
@@ -202,14 +202,14 @@
         <div class="row portfolio-container">
         <!-- New 2025 Event Photos -->
         
-        <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
+        <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
           <div class="portfolio-wrap">
             <img src="images/events25/formal_2.jpeg" class="img-fluid" alt>
             <div class="portfolio-info">
               <h4><a>Formal</a></h4>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
           <div class="portfolio-wrap">
@@ -220,14 +220,14 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
+        <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
           <div class="portfolio-wrap">
             <img src="images/events25/formal_3.jpeg" class="img-fluid" alt>
             <div class="portfolio-info">
               <h4><a>Formal</a></h4>
             </div>
           </div>
-        </div>
+        </div> -->
 
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
@@ -239,14 +239,14 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
+        <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
           <div class="portfolio-wrap">
             <img src="images/events25/formal.jpeg" class="img-fluid" alt>
             <div class="portfolio-info">
               <h4><a>Formal</a></h4>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
           <div class="portfolio-wrap">
@@ -338,14 +338,14 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
+        <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
           <div class="portfolio-wrap">
             <img src="images/events25/stpattys_2.jpg" class="img-fluid" alt>
             <div class="portfolio-info">
               <h4><a>St. Pattys</a></h4>
             </div>
           </div>
-        </div>
+        </div> -->
         
         <div class="col-lg-4 col-md-6 portfolio-item filter-sis" data-wow-delay="0.1s">
           <div class="portfolio-wrap">
