Updated leadership and recruitment sections for Spring 2026, including new member profiles and images. Added new recruitment page and updated links for social media. Adjusted class sections in alumnae.html to reflect current members.

--- a/recruitment.html
+++ b/recruitment.html
@@ -124,7 +124,7 @@
           <div class="text-center">
             <!-- <img src="images/eventsnew/32.jpg" style="width:800px"
               class="img-fluid"> -->
-            <img src="images/eventsnew2/18.jpg" style="width:820px"
+            <img src="images/recruitment/sp26recruitment/recruitment-header-pic.jpeg" style="width:820px"
               class="img-fluid">
           </div>
         </header>
@@ -143,28 +143,26 @@
         </header> -->
 
         <header class="section-header">
-          <h3>Spring 2025 Recruitment</h3>
+          <h3>Spring 2026 Recruitment</h3>
         </header>
         <header class="text-center">
           <p><b>All applicants must attend an info session and either the
-              Coffee Chat or the Resume Review. </b><br> Follow us on Instagram
-            for
-            the
-            latest updates!<br>Please email
+              Meet the Sisters or the Resume Review. </b><br> Follow us on Instagram for the latest updates! 
+              <br>Please email
             aoecornell@gmail.com with any questions.</p>
         </header>
         <div class="text-center">
-          <img src="images/recruitment/sp24recruitment/sp25recruitment/1.png"
+          <img src="images/recruitment/sp26recruitment/1.png"
             style="height:400px;width:400px;margin-right:10px; margin-bottom:15px;"
             class="img-fluid">
-          <img src="images/recruitment/sp24recruitment/sp25recruitment/4.png"
+          <img src="images/recruitment/sp26recruitment/2.png"
             style="height:400px;width:400px;  margin-bottom:15px;"
             class="img-fluid">
           <br>
-          <img src="images/recruitment/sp24recruitment/sp25recruitment/2.png"
+          <img src="images/recruitment/sp26recruitment/3.png"
             style="height:400px;width:400px; margin-right:10px;"
             class="img-fluid">
-          <img src="images/recruitment/sp24recruitment/sp25recruitment/3.png"
+          <img src="images/recruitment/sp26recruitment/4.png"
             style="height:400px;width:400px" class="img-fluid">
         </div>
 
