--- a/sisters.html
+++ b/sisters.html
@@ -388,7 +388,7 @@
     </section>
 
     <!--==========================
-      Zeta Class Section
+      Iota Class Section
       ============================-->
     <section id="team" class>
       <div class="container">
@@ -433,29 +433,6 @@
                     </a>
                     <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
                     <a href="https://www.instagram.com/angelinaa.chen/" target="_blank">
-                      <i class="fa fa-instagram"></i>
-                    </a>
-                    <!-- <a href="link" target="_blank"><i class="fa fa-twitter"></i></a> -->
-                    <!-- <a href="link" target="_blank"><i class="fa fa-desktop"></i></a> -->
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="member">
-              <img src="images/f24/iota_class/tina_cheng.png" class="img-fluid" alt>
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Tina Cheng</h4>
-                  <span>Computer Science '26</span>
-                  <div class="social">
-                    <a href="https://www.linkedin.com/in/tina-chen-g/" target="_blank">
-                      <i class="fa fa-linkedin"></i>
-                    </a>
-                    <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
-                    <a href="https://www.instagram.com/tinachen_g/" target="_blank">
                       <i class="fa fa-instagram"></i>
                     </a>
                     <!-- <a href="link" target="_blank"><i class="fa fa-twitter"></i></a> -->
@@ -511,6 +488,7 @@
               </div>
             </div>
           </div>
+          
           <div class="col-lg-3 col-md-6">
             <div class="member">
               <img src="images/f24/iota_class/sofia_jacobsen.png"  class="img-fluid" alt>
@@ -739,55 +717,6 @@
           </div>
   
           <div class="row">
-  
-            <div class="col-lg-3 col-md-6">
-              <div class="member">
-                <img src="images/thetaclass/shefali.jpg" class="img-fluid" alt>
-                <div class="member-info">
-                  <div class="member-info-content">
-                    <h4>Shefali Awasthi</h4>
-                    <span>Computer Science '26</span>
-                    <div class="social">
-                      <a href="https://www.linkedin.com/in/shefali-awasthi/" target="_blank">
-                        <i class="fa fa-linkedin"></i>
-                      </a>
-                      <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
-                      <a href="https://www.instagram.com/shefali.awasthi/" target="_blank">
-                        <i class="fa fa-instagram"></i>
-                      </a>
-                      <!-- <a href="" target="_blank"><i class="fa fa-linkedin"></i></a> -->
-                      <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
-                      <!-- <a href="link" target="_blank"><i class="fa fa-instagram"></i></a> -->
-                      <!-- <a href="link" target="_blank"><i class="fa fa-twitter"></i></a> -->
-                      <!-- <a href="link" target="_blank"><i class="fa fa-desktop"></i></a> -->
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-  
-            <div class="col-lg-3 col-md-6">
-              <div class="member">
-                <img src="images/f24/theta_class/anjalikesari2.png" class="img-fluid" alt>
-                <div class="member-info">
-                  <div class="member-info-content">
-                    <h4>Anjali Kesari</h4>
-                    <span>Computer Science '26</span>
-                    <div class="social">
-                      <a href="https://www.linkedin.com/in/anjali-kesari/" target="_blank">
-                        <i class="fa fa-linkedin"></i>
-                      </a>
-                      <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
-                      <a href="https://www.instagram.com/anjali.kesari/" target="_blank">
-                        <i class="fa fa-instagram"></i>
-                      </a>
-                      <!-- <a href="link" target="_blank"><i class="fa fa-twitter"></i></a> -->
-                      <!-- <a href="link" target="_blank"><i class="fa fa-desktop"></i></a> -->
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
 
             <div class="col-lg-3 col-md-6">
               <div class="member">
